--- a/views/index.njk
+++ b/views/index.njk
@@ -18,9 +18,8 @@
         <link type="image/png" sizes="96x96" rel="icon" href="/images/icons8-plywood-96.png">
 
         <script src="/javascripts/choices.min.js"></script>
-        <script src=" https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js "></script>
-
         <script src="/javascripts/moment.min.js" ></script>
+        <script src="/javascripts/fullcalendar.min.js" ></script>
         <script src="/javascripts/moment-duration-format.js"></script>
 
     </head>
