--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -308,6 +308,18 @@ input#include-weekends {
   text-align: left;
 }
 
+
+#configForm {
+  max-height: 600px;
+  overflow: hidden scroll;
+  padding-bottom: 50px;
+}
+
+
+#configModal {
+  resize: none;
+}
+
 #issueTypeColors {
   width: auto;
   padding: 20px;
