--- a/views/aboutModal.njk
+++ b/views/aboutModal.njk
@@ -13,7 +13,7 @@
                 <p>Version: 0.2.3.3</p>
             </div>
             <div class="buttons">
-                <button id="close-btn-about" title="Close" type="button">✖️</button>
+                <button id="close-btn-about" class="close-btn" title="Close" type="button">✖️</button>
             </div>
         </form>
     </div>
