--- a/views/configModal.njk
+++ b/views/configModal.njk
@@ -22,10 +22,12 @@
       </div>
       <div class="config-section">
         <h3>Issue Type Colors</h3>
-        <div id="issueTypeColors">
-          <!-- Issue type color inputs will be dynamically added here -->
+        <div class="form-group">
+          <div id="issueTypeColors">
+            <!-- Issue type color inputs will be dynamically added here -->
+          </div>
+          <button type="button" class="primary" onclick="addIssueType()">➕</button>
         </div>
-        <button type="button" class="primary" onclick="addIssueType()">Add Issue Type</button>
       </div>
       <div class="buttons">
         <button id="close-btn-config" onclick="hideModal('#configModal')" title="Close" class="close-btn" type="button">✖️</button>
