--- a/views/configModal.njk
+++ b/views/configModal.njk
@@ -29,9 +29,22 @@
           <button type="button" class="primary" onclick="addIssueType()">➕</button>
         </div>
       </div>
+      <div class="config-section">
+        <h3>Timer Settings</h3>
+        <div class="form-group">
+          <label for="rounding-interval">Timer rounding interval (minutes):</label>
+          <input type="number" id="rounding-interval" name="roundingInterval" value="15" min="1">
+        </div>
+        <div class="form-group">
+          <label for="save-timer-on-issue-switch">
+            Save timer when switching issue
+          </label>
+          <input type="checkbox" id="save-timer-on-issue-switch" name="saveTimerOnIssueSwitch">
+        </div>
+      </div>
       <div class="buttons">
         <button id="close-btn-config" onclick="hideModal('#configModal')" title="Close" class="close-btn" type="button">✖️</button>
-        <button type="button" class="success" onclick="saveConfig()">Save</button>
+        <button type="button" class="success" onclick="saveConfig()">💾</button>
       </div>
     </form>
   </div>
