--- a/views/timerModal.njk
+++ b/views/timerModal.njk
@@ -8,10 +8,15 @@
       <label for="comment-timer">Comment:</label>
       <textarea class="comment" id="comment-timer" name="comment"></textarea>
       <div class="timer-display" id="timer-display">0m</div>
+      <div class="form-group">
+        <label for="round-timer-checkbox">Round to</label>
+        <input type="checkbox" id="round-timer-checkbox" name="roundTimer">
+        <input type="number" id="timer-rounding-interval" name="roundingInterval" min="1"> minutes
+      </div>
       <div class="buttons">
-        <button type="button" id="start-pause-resume-timer-btn" class="success" onclick="toggleStartPauseResumeTimer()">Start</button>
-        <button id="cancel-btn-timer" title="Cancel" class="close-btn" type="button" onclick="toggleTimerModal();">✖️</button>
-        <button type="button" id="stop-timer-btn" class="success" onclick="stopTimer()" disabled>Save</button>
+        <button type="button" id="start-save-timer-btn" class="" onclick="toggleStartSaveTimer()" title="Start/Save Timer">🔴</button>
+        <button type="button" id="cancel-timer-btn" class="destructive" onclick="cancelTimer()" title="Cancel Timer">❌</button>
+        <button id="cancel-btn-timer" title="Close" class="close-btn" type="button" onclick="toggleTimerModal();">✖️</button>
       </div>
       <div id="confirmation-message" class="confirmation-message"></div> <!-- Confirmation message element -->
     </form>
